# SelacoVR

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: continuous_integration.yml
OpenVRData/ST-Models-Complete/: Modeldef.Doom.Weapons.def
game-music-emu/gme/: Fir_Resampler.cpp
libraries/adlmidi/: CMakeLists.txt  adlmidi.cpp
libraries/asmjit/: CMakeLists.txt
libraries/dumb/: CMakeLists.txt
libraries/game-music-emu/: CMakeLists.txt
libraries/oplsynth/: CMakeLists.txt
libraries/opnmidi/: CMakeLists.txt  opnbank.h  opnmidi.cpp
libraries/timidity/: CMakeLists.txt  playmidi.cpp  timidity.cpp
libraries/timidityplus/: CMakeLists.txt  common.cpp  playmidi.cpp
libraries/wildmidi/: CMakeLists.txt  wildmidi_lib.cpp  wm_error.cpp
mobile/: Android.mk  Android_adlmidi.mk  Android_bzip2.mk  Android_lzma.mk  Android_opnmidi.mk  Android_src.mk  Android_zmusic.mk  Android_zwidget.mk
specs/: udmf_zdoom.txt
src/: CMakeLists.txt  actionspecials.h  actor.h  actorinlines.h  am_map.cpp  b_bot.cpp  b_bot.h  b_game.cpp  bbannouncer.cpp  c_bind.cpp  c_bind.h  c_cmds.cpp  c_console.cpp  c_console.h  c_cvars.cpp  c_cvars.h  c_dispatch.cpp  c_dispatch.h  cmdlib.cpp  compatibility.cpp  ct_chat.cpp  d_anonstats.cpp  d_buttons.h  d_dehacked.cpp  d_event.h  d_iwad.cpp  d_main.cpp  d_main.h  d_net.cpp  d_netinfo.cpp  d_player.h  d_stats.cpp  decallib.cpp  dobject.cpp  dobjgc.cpp  dobjgc.h  dobjtype.cpp  doomdata.h  doomdef.h  doomstat.cpp  (+118 more)
src/gamedata/: gi.cpp  (+18 more)
wadsrc/: CMakeLists.txt
wadsrc_extra/: CMakeLists.txt
(+1020 files in other folders)
